# graphql

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md
.gcp/: cloudbuild.yaml
.github/workflows/: ci.yaml
db/migrations/: 0_platforms.sql  1_games.sql  2_game_cube.sql  3_xbox.sql
src/: environment.rs  main.rs
src/games/: mod.rs
src/games/stores/: mod.rs  sqlite.rs
src/graphql/: mod.rs  page.rs
src/utils/: pipe.rs
