[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
async-graphql = "4.0.6"
async-graphql-tide = "4.0.6"
async-trait = "0.1.57"
base64 = "0.13.0"
lazy_static = "1.4.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sqlx = { version = "0.6.0", features = [ "runtime-async-std-native-tls", "sqlite" ] }
tide = "0.16.0"
